@@ -15,7 +15,7 @@
 #define BUFFERSIZE_S        16
 #define BUFFERSIZE          4096
 #define MAX_SCREEN          8
-#define TOTAL_CONTEXTS      10
+#define TOTAL_CONTEXTS      11
 #define INVALID_ORDER_KEY   99
 #define PG_STAT_ACTIVITY_MIN_AGE_DEFAULT "00:00:10.0"
 
@@ -65,6 +65,7 @@ unsigned int hz;
 #define PG_STAT_FUNCTIONS_NUM                   7
 #define PG_STAT_STATEMENTS_TIMING_NUM           8
 #define PG_STAT_STATEMENTS_GENERAL_NUM          9
+#define PG_STAT_STATEMENTS_IO_NUM               10
 
 #define GROUP_ACTIVE        1 << 0
 #define GROUP_IDLE          1 << 1
@@ -84,7 +85,8 @@ enum context
     pg_stat_activity_long,
     pg_stat_functions,
     pg_stat_statements_timing,
-    pg_stat_statements_general
+    pg_stat_statements_general,
+    pg_stat_statements_io
 };
 
 #define DEFAULT_QUERY_CONTEXT   pg_stat_database
@@ -495,6 +497,85 @@ struct colAttrs {
 #define PG_STAT_STATEMENTS_GENERAL_ORDER_MAX    5
 #define PG_STAT_STATEMENTS_GENERAL_DIFF_MIN    4
 #define PG_STAT_STATEMENTS_GENERAL_DIFF_MAX    5
+
+#define PG_STAT_STATEMENTS_IO_91_QUERY_P1 \
+    "SELECT \
+        a.rolname AS user, d.datname AS database, \
+        (sum(p.shared_blks_hit) + sum(p.local_blks_hit)) \
+            * (SELECT current_setting('block_size')::int / 1024) as tot_hits, \
+        (sum(p.shared_blks_read) + sum(p.local_blks_read)) \
+            * (SELECT current_setting('block_size')::int / 1024) as tot_reads, \
+        (sum(p.shared_blks_written) + sum(p.local_blks_written)) \
+            * (SELECT current_setting('block_size')::int / 1024) as tot_written, \
+        (sum(p.shared_blks_hit) + sum(p.local_blks_hit)) \
+            * (SELECT current_setting('block_size')::int / 1024) as hits, \
+        (sum(p.shared_blks_read) + sum(p.local_blks_read)) \
+            * (SELECT current_setting('block_size')::int / 1024) as reads, \
+        (sum(p.shared_blks_written) + sum(p.local_blks_written)) \
+            * (SELECT current_setting('block_size')::int / 1024) as written, \
+        sum(p.calls) AS calls, \
+        left(md5(d.datname || a.rolname || p.query ), 10) AS queryid, \
+        regexp_replace( \
+        regexp_replace( \
+        regexp_replace( \
+        regexp_replace( \
+        regexp_replace(p.query, \
+            E'\\\\?(::[a-zA-Z_]+)?( *, *\\\\?(::[a-zA-Z_]+)?)+', '?', 'g'), \
+            E'\\\\$[0-9]+(::[a-zA-Z_]+)?( *, *\\\\$[0-9]+(::[a-zA-Z_]+)?)*', '$N', 'g'), \
+            E'--.*$', '', 'ng'), \
+            E'/\\\\*.*?\\\\*\\/', '', 'g'), \
+            E'\\\\s+', ' ', 'g') AS query \
+    FROM pg_stat_statements p \
+    JOIN pg_authid a ON a.oid=p.userid \
+    JOIN pg_database d ON d.oid=p.dbid \
+    WHERE d.datname != 'postgres' AND calls > 50 \
+    GROUP BY a.rolname, d.datname, query ORDER BY "
+
+#define PG_STAT_STATEMENTS_IO_QUERY_P1 \
+    "SELECT \
+        a.rolname AS user, d.datname AS database, \
+        (sum(p.shared_blks_hit) + sum(p.local_blks_hit)) \
+            * (SELECT current_setting('block_size')::int / 1024) as tot_hits, \
+        (sum(p.shared_blks_read) + sum(p.local_blks_read)) \
+            * (SELECT current_setting('block_size')::int / 1024) as tot_reads, \
+        (sum(p.shared_blks_dirtied) + sum(p.local_blks_dirtied)) \
+            * (SELECT current_setting('block_size')::int / 1024) as tot_dirtied, \
+        (sum(p.shared_blks_written) + sum(p.local_blks_written)) \
+            * (SELECT current_setting('block_size')::int / 1024) as tot_written, \
+        (sum(p.shared_blks_hit) + sum(p.local_blks_hit)) \
+            * (SELECT current_setting('block_size')::int / 1024) as hits, \
+        (sum(p.shared_blks_read) + sum(p.local_blks_read)) \
+            * (SELECT current_setting('block_size')::int / 1024) as reads, \
+        (sum(p.shared_blks_dirtied) + sum(p.local_blks_dirtied)) \
+            * (SELECT current_setting('block_size')::int / 1024) as dirtied, \
+        (sum(p.shared_blks_written) + sum(p.local_blks_written)) \
+            * (SELECT current_setting('block_size')::int / 1024) as written, \
+        sum(p.calls) AS calls, \
+        left(md5(d.datname || a.rolname || p.query ), 10) AS queryid, \
+        regexp_replace( \
+        regexp_replace( \
+        regexp_replace( \
+        regexp_replace( \
+        regexp_replace(p.query, \
+            E'\\\\?(::[a-zA-Z_]+)?( *, *\\\\?(::[a-zA-Z_]+)?)+', '?', 'g'), \
+            E'\\\\$[0-9]+(::[a-zA-Z_]+)?( *, *\\\\$[0-9]+(::[a-zA-Z_]+)?)*', '$N', 'g'), \
+            E'--.*$', '', 'ng'), \
+            E'/\\\\*.*?\\\\*\\/', '', 'g'), \
+            E'\\\\s+', ' ', 'g') AS query \
+    FROM pg_stat_statements p \
+    JOIN pg_authid a ON a.oid=p.userid \
+    JOIN pg_database d ON d.oid=p.dbid \
+    WHERE d.datname != 'postgres' AND calls > 50 \
+    GROUP BY a.rolname, d.datname, query ORDER BY "
+#define PG_STAT_STATEMENTS_IO_QUERY_P2 " DESC"
+
+#define PG_STAT_STATEMENTS_IO_ORDER_MIN    2
+#define PG_STAT_STATEMENTS_IO_ORDER_91_MAX    8
+#define PG_STAT_STATEMENTS_IO_ORDER_LATEST_MAX    10
+#define PG_STAT_STATEMENTS_IO_DIFF_91_MIN    5
+#define PG_STAT_STATEMENTS_IO_DIFF_91_MAX    8
+#define PG_STAT_STATEMENTS_IO_DIFF_LATEST_MIN    6
+#define PG_STAT_STATEMENTS_IO_DIFF_LATEST_MAX    10
 
 /* other queries */
 /* don't log our queries */
